fix: add overscan to messages for better rendering. add padding to profile posts to prevent scroll from jumping when switching tabs

--- a/styles/profilePage.module.scss
+++ b/styles/profilePage.module.scss
@@ -274,3 +274,11 @@
         display: none;
     }
 }
+
+.postsContainer {
+    padding-bottom: 500px;
+
+    @media (max-width: 800px) {
+        padding-bottom: 400px;
+    }
+}
